@@ -26,7 +26,7 @@ dependencyUpdates.resolutionStrategy = {
 }
 
 def springBootVersion = plugins.getPlugin('org.springframework.boot').class.package.implementationVersion
-def springCloudVersion = '2020.0.0'
+def springCloudVersion = '2020.0.3'
 
 def versions = [
   logback           : '1.2.3',
@@ -75,6 +75,7 @@ allprojects {
   }
 
   sourceCompatibility = 11
+  targetCompatibility = 11
   compileJava {
     options.compilerArgs << '-parameters' << '-Xlint:deprecation'
   }
@@ -146,7 +147,7 @@ allprojects {
       // solves CVE-2020-5407
       dependencySet(
         group: 'org.springframework.security',
-        version: '5.4.5'
+        version: '5.5.1'
       ) {
         entry 'spring-security-crypto'
       }
@@ -186,15 +187,15 @@ dependencies {
 
   compile group: 'com.mitchellbosecke', name: 'pebble', version: '2.4.0'
 
-  compile group: 'commons-io', name: 'commons-io', version: '2.7'
+  compile group: 'commons-io', name: 'commons-io', version: '2.11.0'
 
   compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
-  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.1'
+  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.4'
   compile group: 'org.postgresql', name: 'postgresql', version: '42.2.14'
 
-  compile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.0-RELEASE'
+  compile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
 
   compile group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformJavaLogging
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformJavaLogging
@@ -229,7 +230,7 @@ dependencies {
   compile group: 'org.springframework.retry', name: 'spring-retry'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
 
-  compile group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.0'
+  compile group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.2'
 
   compile group: 'org.springframework.cloud',name : 'spring-cloud-starter-bootstrap'
 
@@ -254,8 +255,8 @@ dependencies {
   testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
   testCompile group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
   testCompile group: 'org.junit.platform', name: 'junit-platform-engine', version: versions.junitPlatform
-  testCompile group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
-  testCompile group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
+  testCompile group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
+  testCompile group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
   testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.8.0'
   testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
   testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.14.3'
@@ -265,6 +266,8 @@ dependencies {
   testCompile group: 'net.jodah', name: 'failsafe', version: '2.4.0'
   testCompile group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.2'
   testCompile group: 'org.xmlunit', name: 'xmlunit-matchers', version: '2.8.2'
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 }
 
 sourceSets {
@@ -298,6 +301,12 @@ dependencies {
 
 test {
   useJUnitPlatform()
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task apiTest(type: Test) {
@@ -345,8 +354,10 @@ task smoke(type: Test) {
 }
 
 task highLevelDataSetup(type: JavaExec) {
-  main = "uk.gov.hmcts.cmc.claimstore.befta.HighLevelDataSetupApp"
-  classpath += sourceSets.main.runtimeClasspath
+  dependsOn aatClasses
+
+  main = "uk.gov.hmcts.cmc.claimstore.tests.befta.HighLevelDataSetupApp"
+  classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
@@ -401,7 +412,6 @@ sonarqube {
         "**/cmc/claimstore/services/ccd/callbacks/HWFMiscellaneousCallbackHandler.java",
         "**/cmc/claimstore/services/ccd/callbacks/HWFFullAndPartRemissionCallbackHandler.java",
         "**/cmc/claimstore/courtfinder/models/**",
-        "**/HighLevelDataSetupApp.java",
         "**/ccd/migration/**",
         "**/EmailData.java",
         "**/CCDCaseHandler.java",
